--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex-logger": "^0.1.0",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
+    "nodemon": "^1.11.0",
     "pg": "^6.0.2",
     "socket.io": "^2.0.2"
   },
