--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
+    "cookie-session": "^2.0.0-beta.2",
     "csvtojson": "^1.1.6",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
