--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.4",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
+    "mailgun-js": "^0.11.2",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
     "nodemon": "^1.11.0",
